--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.1",
     "clsx": "^1.1.1",
+    "formik": "^2.2.9",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
