--- a/dev_ops/cd/Jenkinsfile
+++ b/dev_ops/cd/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
                 echo 'Building user microservices ...'
                 sh 'docker build --force-rm --no-cache --tag ezread_usuario_crear:latest ./src/backend/usuario/crear/'
                 /* groovylint-disable-next-line LineLength */
-                sh 'docker build --force-rm --no-cache --tag ezread_usuario_editar:latest ./src/backend/usuario/editar/'''
+                sh 'docker build --force-rm --no-cache --tag ezread_usuario_editar:latest ./src/backend/usuario/editar/'
                 /* groovylint-disable-next-line LineLength */
                 sh 'docker build --force-rm --no-cache --tag ezread_usuario_eliminar:latest ./src/backend/usuario/eliminar/'
                 /* groovylint-disable-next-line LineLength */
