--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./mongo-dev-data:/data/db
+      - ./mongo-prod-data:/data/db
   login:
     image: ezread_login:latest
     restart: always
