[fix] docker name images

--- a/dev_ops/cd/Jenkinsfile
+++ b/dev_ops/cd/Jenkinsfile
@@ -23,22 +23,22 @@ pipeline {
         stage('Building') {
             steps {
                 echo 'Building autentication microservices ...'
-                sh 'docker build --force-rm --no-cache --tag ezread_login:latest ./src/backend/autenticacion/login/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_login:latest ./src/backend/autenticacion/login/'
                 echo 'Building book microservices ...'
-                sh 'docker build --force-rm --no-cache --tag ezread_libro_crear:latest ./src/backend/libro/crear/'
-                sh 'docker build --force-rm --no-cache --tag ezread_libro_editar:latest ./src/backend/libro/editar/'
-                sh 'docker build --force-rm --no-cache --tag ezread_libro_eliminar:latest ./src/backend/libro/eliminar/'
-                sh 'docker build --force-rm --no-cache --tag ezread_libro_obtener:latest ./src/backend/libro/obtener/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_crear:latest ./src/backend/libro/crear/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_editar:latest ./src/backend/libro/editar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_eliminar:latest ./src/backend/libro/eliminar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_obtener:latest ./src/backend/libro/obtener/'
                 echo 'Building order microservices ...'
-                sh 'docker build --force-rm --no-cache --tag ezread_orden_crear:latest ./src/backend/orden/crear/'
-                sh 'docker build --force-rm --no-cache --tag ezread_orden_editar:latest ./src/backend/orden/editar/'
-                sh 'docker build --force-rm --no-cache --tag ezread_orden_eliminar:latest ./src/backend/orden/eliminar/'
-                sh 'docker build --force-rm --no-cache --tag ezread_orden_obtener:latest ./src/backend/orden/obtener/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_crear:latest ./src/backend/orden/crear/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_editar:latest ./src/backend/orden/editar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_eliminar:latest ./src/backend/orden/eliminar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_obtener:latest ./src/backend/orden/obtener/'
                 echo 'Building user microservices ...'
-                sh 'docker build --force-rm --no-cache --tag ezread_usuario_crear:latest ./src/backend/usuario/crear/'
-                sh 'docker build --force-rm --no-cache --tag ezread_usuario_editar:latest ./src/backend/usuario/editar/'
-                sh 'docker build --force-rm --no-cache --tag ezread_usuario_eliminar:latest ./src/backend/usuario/eliminar/'
-                sh 'docker build --force-rm --no-cache --tag ezread_usuario_obtener:latest ./src/backend/usuario/obtener/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_crear:latest ./src/backend/usuario/crear/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_editar:latest ./src/backend/usuario/editar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_eliminar:latest ./src/backend/usuario/eliminar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_obtener:latest ./src/backend/usuario/obtener/'
                 echo 'Building web page ...'
                 withCredentials([file(credentialsId: 'FRONTEND_TEST', variable: 'MY_FRONTEND_TEST')]) {
                     sh 'cp $MY_FRONTEND_TEST ./src/frontend/.env.test'
