--- a/dev_ops/cd/Jenkinsfile
+++ b/dev_ops/cd/Jenkinsfile
@@ -83,6 +83,7 @@ pipeline {
                 // sh 'docker push gpeitzner/ezread_usuario_obtener:latest'
                 // sh 'docker push gpeitzner/ezread_ui:latest'
                 withCredentials([file(credentialsId: 'BACKEND_PROD', variable: 'MY_BACKEND_PROD')]) {
+                    sh 'rm ./env-prod'
                     sh 'cp $MY_BACKEND_PROD ./env-prod'
                     sh 'python3 ./dev_ops/cd/deploy.py'
                 }
