--- a/dev_ops/ci/Jenkinsfile
+++ b/dev_ops/ci/Jenkinsfile
@@ -1,7 +1,9 @@
-/* groovylint-disable CompileStatic */
+/* groovylint-disable CompileStatic, DuplicateStringLiteral, LineLength */
 pipeline {
     agent any
-
+    environment {
+        CD_HOST     = credentials('CD_HOST')
+    }
     stages {
         stage('Unit Testing') {
             steps {
@@ -22,17 +24,36 @@ pipeline {
         }
         stage('Building') {
             steps {
-                echo 'Building..'
+                echo 'Building autentication microservices ...'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_login:latest ./src/backend/autenticacion/login/'
+                echo 'Building book microservices ...'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_crear:latest ./src/backend/libro/crear/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_editar:latest ./src/backend/libro/editar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_eliminar:latest ./src/backend/libro/eliminar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_libro_obtener:latest ./src/backend/libro/obtener/'
+                echo 'Building order microservices ...'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_crear:latest ./src/backend/orden/crear/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_editar:latest ./src/backend/orden/editar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_eliminar:latest ./src/backend/orden/eliminar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_orden_obtener:latest ./src/backend/orden/obtener/'
+                echo 'Building user microservices ...'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_crear:latest ./src/backend/usuario/crear/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_editar:latest ./src/backend/usuario/editar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_eliminar:latest ./src/backend/usuario/eliminar/'
+                sh 'docker build --force-rm --no-cache --tag gpeitzner/ezread_usuario_obtener:latest ./src/backend/usuario/obtener/'
+                echo 'Building web page ...'
+                withCredentials([file(credentialsId: 'FRONTEND_TEST', variable: 'MY_FRONTEND_TEST')]) {
+                    sh 'cp $MY_FRONTEND_TEST ./src/frontend/.env.test'
+                    sh 'docker build --force-rm --no-cache --build-arg NODE_ENV=test --tag gpeitzner/ezread_ui:latest ./src/frontend/'
+                    sh 'rm ./src/frontend/.env.test'
+                }
+                echo 'Cleaning intermediate building images ...'
+                sh 'docker image prune -f'
             }
         }
         stage('Integration Testing') {
             steps {
                 echo 'Testing....'
-            }
-        }
-        stage('Deploying') {
-            steps {
-                echo 'Deploying....'
             }
         }
     }
