--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -72,6 +72,13 @@ services:
       - ./.env-prod
     ports:
       - 5009:5009
+  libro_solicitar:
+    image: gpeitzner/ezread_libro_solicitar:latest
+    restart: always
+    env_file:
+      - ./.env-prod
+    ports:
+      - 5014:5014
   orden_crear:
     image: gpeitzner/ezread_orden_crear:latest
     restart: always
