--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -110,3 +110,11 @@ services:
     restart: always
     ports:
       - 8080:80
+  test:
+    image: selenium/standalone-firefox:4.0.0-rc-1-prerelease-20210618
+    restart: always
+    ports:
+      - 4444:4444
+      - 7900:7900
+    volumes:
+      - ./e2e/image.jpg:/home/seluser/image.jpg
