--- a/dev_ops/ci/Jenkinsfile
+++ b/dev_ops/ci/Jenkinsfile
@@ -53,13 +53,13 @@ pipeline {
             steps {
                 echo 'Starting tests ...'
                 withCredentials([file(credentialsId: 'BACKEND_TEST', variable: 'MY_BACKEND_TEST')]) {
-                    sh 'cp $MY_BACKEND_TEST ./.env.test'
+                    sh 'cp $MY_BACKEND_TEST ./.env-test'
                     sh 'docker-compose -f ./docker-compose-test.yml up -d'
                     echo 'Connect to http://test.ezread.ml:7900/ to view the tests'
                     sh 'sleep 15'
                     sh 'sh ./e2e/run.sh'
                     sh 'docker-compose -f ./docker-compose-test.yml down'
-                    sh 'rm ./.env.test'
+                    sh 'rm ./.env-test'
                     sh ':]'
                 }
             }
