--- a/dev_ops/ci/Jenkinsfile
+++ b/dev_ops/ci/Jenkinsfile
@@ -56,9 +56,27 @@ pipeline {
                     sh 'cp $MY_BACKEND_TEST ./.env-test'
                     sh 'docker-compose -f ./docker-compose-test.yml up -d'
                     echo 'Connect to http://test.ezread.ml:7900/ to view the tests'
-                    sh 'sleep 15'
-                    sh 'sh ./e2e/run.sh'
+                    sh 'sleep 30'
+                    echo 'Executing e2e tests ...'
+                    echo 'Running test 1 ...'
+                    sh 'python3 ./e2e/test1.py'
+                    echo 'Running test 2 ...'
+                    sh 'python3 ./e2e/test2.py'
+                    echo 'Running test 3 ...'
+                    sh 'python3 ./e2e/test3.py'
+                    echo 'Running test 4 ...'
+                    sh 'python3 ./e2e/test4.py'
+                    echo 'Running test 5 ...'
+                    sh 'python3 ./e2e/test5.py'
+                    echo 'Running test 6 ...'
+                    sh 'python3 ./e2e/test6.py'
+                    echo 'Running test 7 ...'
+                    sh 'python3 ./e2e/test7.py'
+                    echo 'Running test 8 ...'
+                    sh 'python3 ./e2e/test8.py'
+                    sh 'sleep 10'
                     sh 'docker-compose -f ./docker-compose-test.yml down'
+                    sh 'sleep 10'
                     sh 'rm ./.env-test'
                     echo ':]'
                 }
