--- a/e2e/docker-compose-test.yml
+++ b/e2e/docker-compose-test.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./e2e/data.js:/docker-entrypoint-initdb.d/data.js
+      - ./data.js:/docker-entrypoint-initdb.d/data.js
   login:
     image: gpeitzner/ezread_login:latest
     restart: always
@@ -119,4 +119,4 @@ services:
       - 4444:4444
       - 7900:7900
     volumes:
-      - ./e2e/image.jpg:/home/seluser/image.jpg
+      - ./image.jpg:/home/seluser/image.jpg
